# BLEEP-v1-1

./: .github-deny.toml  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  Makefile  README.md  RESEARCH.md  WHITEPAPER.md  demo_interchain.sh
.github/workflows/: bench.yml  ci.yml  release.yml  security.yml
config/: genesis.json  testnet_config.json
crates/bleep-ai/: Cargo.toml
crates/bleep-ai/src/: ai_assistant.rs  ai_attestation.rs  ai_consensus_integration.rs  ai_constraint_validator.rs  ai_decision.rs  ai_decision_module.rs  ai_feedback_loop.rs  ai_proposal_types.rs  bleep_connect.rs  compliance.rs  consensus.rs  deterministic_inference.rs  energy_monitor.rs  feature_extractor.rs  governance.rs  governance_integration.rs  interoperability.rs  lib.rs  phase3_tests.rs  phase3_unit_tests.rs  security.rs  sharding.rs  smart_contracts.rs  wallet.rs  zkp_verification.rs
crates/bleep-ai/tests/: phase4_ai_integration_tests.rs
crates/bleep-auth/: Cargo.toml
crates/bleep-auth/src/: audit.rs  audit_store.rs  credentials.rs  identity.rs  lib.rs  rate_limiter.rs  rbac.rs  session.rs  validator_binding.rs
crates/bleep-cli/src/: cli.rs
crates/bleep-consensus/: Cargo.toml  README.md
crates/bleep-consensus/examples/: phase3_syntax_check.rs
crates/bleep-consensus/src/: ai_adaptive_logic.rs  block_producer.rs  blockchain_state.rs  chaos_engine.rs  consensus.rs  engine.rs  epoch.rs  finality.rs  gossip_bridge.rs  lib.rs  networking.rs  orchestrator.rs  pbft_engine.rs  performance_bench.rs  pos_engine.rs  pow_engine.rs  security_audit.rs  shard_coordinator.rs  slashing_engine.rs  tests.rs  validator_identity.rs
crates/bleep-consensus/src/consensus/: networking.rs
crates/bleep-consensus/tests/: phase1_integration_test.rs  phase1_proof_of_concept.rs  phase3_self_healing_tests.rs
crates/bleep-core/: Cargo.toml  README.md
crates/bleep-core/src/: anti_asset_loss.rs  block.rs  block_validation.rs  blockchain.rs  decision_attestation.rs  decision_verification.rs  invariant_enforcement.rs  lib.rs  mempool.rs  mempool_bridge.rs  networking.rs  proof_of_identity.rs  protocol_invariants.rs  state.rs  tests.rs  transaction.rs  transaction_manager.rs  transaction_pool.rs
crates/bleep-crypto/: Cargo.toml
crates/bleep-crypto/src/: anti_asset_loss.rs  bip39.rs  lib.rs  logging.rs  merkle_commitment.rs  merkletree.rs  pq_crypto.rs  quantum_resistance.rs  quantum_secure.rs  tests.rs  tx_signer.rs  zkp_verification.rs
crates/bleep-economics/: Cargo.toml  README.md
crates/bleep-economics/src/: distribution.rs  fee_market.rs  game_theory.rs  lib.rs  oracle_bridge.rs  runtime.rs  tokenomics.rs  validator_incentives.rs
crates/bleep-economics/tests/: phase5_integration_tests.rs
crates/bleep-governance/: Cargo.toml  README.md
crates/bleep-governance/src/: ai_hooks.rs  ai_reputation.rs  apip.rs  constitution.rs  deterministic_activation.rs  deterministic_executor.rs  forkless_upgrades.rs  governance_binding.rs  governance_core.rs  governance_engine.rs  governance_voting.rs  invariant_monitoring.rs  lib.rs  live_governance.rs  phase4_governance_tests.rs  phase5_comprehensive_tests.rs  phase5_integration_tests.rs  proposal_lifecycle.rs  protocol_evolution.rs  protocol_rules.rs  safety_constraints.rs  zk_voting.rs
crates/bleep-governance/tests/: export_import.rs  phase2_governance_tests.rs
crates/bleep-indexer/: Cargo.toml
crates/bleep-indexer/src/: events.rs  indexes.rs  lib.rs  query.rs  reorg.rs
crates/bleep-interop/: README.md  layer3_bridge.rs  lib.rs  nullifier_store.rs
crates/bleep-interop/bleep-connect-adapters/: Cargo.toml
crates/bleep-interop/bleep-connect-adapters/src/: lib.rs
crates/bleep-interop/bleep-connect-commitment-chain/: Cargo.toml
crates/bleep-interop/bleep-connect-core/: Cargo.toml
crates/bleep-interop/bleep-connect-core/src/: lib.rs
crates/bleep-interop/contracts/: BleepFulfill.sol
crates/bleep-p2p/: Cargo.toml
crates/bleep-p2p/src/: ai_security.rs  dark_routing.rs  gossip_protocol.rs  kademlia_dht.rs  lib.rs  message_protocol.rs  onion_routing.rs  p2p_network.rs  p2p_node.rs  peer_manager.rs  quantum_crypto.rs  sig_availability.rs  types.rs
crates/bleep-pat/: Cargo.toml  README.md
crates/bleep-pat/src/: engine.rs  error.rs  gas_model.rs  intent.rs  lib.rs  pat_engine.rs  registry.rs  state_diff.rs  token.rs
crates/bleep-rpc/src/: lib.rs
crates/bleep-scheduler/src/: built_in.rs  errors.rs  lib.rs  metrics.rs  registry.rs  task.rs
crates/bleep-sig-availability/: Cargo.toml
crates/bleep-sig-availability/src/: availability.rs  cargo.toml  gossip.rs  lib.rs  merkle.rs  store.rs  types.rs
crates/bleep-state/: Cargo.toml
crates/bleep-state/src/: advanced_fault_detector.rs  ai.rs  cross_shard_2pc.rs  cross_shard_ai_hooks.rs  cross_shard_locking.rs  cross_shard_recovery.rs  cross_shard_safety_invariants.rs  cross_shard_transaction.rs  crypto.rs  lib.rs  p2p.rs  phase2_full_integration_tests.rs  phase2_integration_tests.rs  phase2_safety_invariants.rs  phase4_integration_tests.rs  phase4_recovery_orchestrator.rs  phase4_safety_invariants.rs  proptest_sprint8.rs  protocol_versioning.rs  rollback_engine.rs  self_healing_orchestrator.rs  shard_ai_extension.rs  shard_checkpoint.rs  shard_epoch_binding.rs  shard_fault_detection.rs  shard_healing.rs  shard_isolation.rs  shard_lifecycle.rs  shard_manager.rs  shard_registry.rs  shard_rollback.rs  shard_validator_assignment.rs  shard_validator_slashing.rs  snapshot_engine.rs  state_manager.rs  state_merkle.rs  state_storage.rs  transaction.rs
crates/bleep-telemetry/src/: lib.rs  metrics.rs
crates/bleep-vm/: Cargo.toml
crates/bleep-vm/src/: error.rs  intent.rs  lib.rs  types.rs
crates/bleep-wallet-core/: Cargo.toml
crates/bleep-wallet-core/src/: lib.rs  wallet.rs
crates/bleep-zkp/: Cargo.toml  README.md
crates/bleep-zkp/src/: batch_sig_prover.rs  extended_air.rs  lib.rs  pq_proofs.rs  stark_proofs.rs
scripts/: setup-cicd.sh
tests/: sprint9_integration.rs  test_p2p.rs
tools/governance-demo/: Cargo.toml
tools/governance-demo/src/: keystore.rs  main.rs
(+24 files in other folders)
