[package]
name        = "bleep-governance"
version     = "0.1.0"
edition     = "2021"
authors     = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Governance module for BLEEP blockchain."
license     = "MIT OR Apache-2.0"

[dependencies]
# Core utilities
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
hex          = "0.4.3"
rand         = "0.8.5"
log          = "0.4"
env_logger   = "0.11"
thiserror    = "1.0.39"
anyhow       = "1.0.80"
chrono       = { version = "0.4", features = ["serde"] }

# Async & sync
tokio        = { version = "1.36", features = ["full"] }
dashmap      = "5.5.3"
parking_lot  = "0.12.1"

# Cryptography
sha2         = "0.10.8"
aes-gcm      = "0.10.3"
pqcrypto     = "0.18.1"


# Internal BLEEP modules
bleep-core   = { path = "../bleep-core" }
bleep-crypto = { path = "../bleep-crypto" }
bleep-state  = { path = "../bleep-state" }
bleep-interop = { path = "../bleep-interop" }
bleep-ai     = { path = "../bleep-ai" }

# NOTE: tch (PyTorch), ipfs-api, arweave-rs, bulletproofs, zksnarks removed for MVP.
# self_amending.rs and off_chain_voting.rs use these — they are not exposed
# in lib.rs and are compiled only when the `ml` feature is enabled (future sprint).

[features]
default = []
ml = []   # enables tch/onnx modules in future sprint
