[package]
name        = "bleep-pat"
version     = "2.0.0"
edition     = "2021"
authors     = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "BLEEP Programmable Asset Token (PAT) — 6-layer BLEEP-native execution engine"
license     = "MIT OR Apache-2.0"

# PAT v2 is a BLEEP-native 6-layer intent-driven engine, modelled exactly
# after bleep-vm:
#   PATIntent → PATRouter → PATEngine → Sandbox → StateDiff → GasModel
# All Substrate macros (decl_module!, decl_storage!, decl_event!, #[weight])
# and ink! contract attributes are gone.

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
sha2         = "0.10.8"
sha3         = "0.10.8"
hex          = "0.4.3"
dashmap      = "5.5.3"
tokio        = { version = "1.36", features = ["full"] }
async-trait  = "0.1.77"
log          = "0.4.21"
tracing      = "0.1.40"
thiserror    = "1.0.39"
anyhow       = "1.0.80"
bleep-crypto = { path = "../bleep-crypto" }
rocksdb      = "0.21.0"

[dev-dependencies]
tokio-test = "0.4.3"
