[package]
name    = "bleep-zkp"
version = "0.2.0"
edition = "2021"
description = "BLEEP ZK proof system — STARK circuits, prover/verifier, transparent"

[dependencies]
ark-std        = "0.4"
ark-serialize  = "0.4"
serde          = { version = "1.0", features = ["derive"] }
rand           = "0.8"
sha3           = "0.10.8"
hex            = "0.4"
tracing        = "0.1"
winterfell     = "0.13.1"
winter-air     = "0.13.1"
bincode        = "1.3"
bleep-crypto   = { path = "../bleep-crypto" }
